Auth refactor and login with actual credentials on flutter
Refactor the backend auth stuff, deleted some useless stuff and made it so that real credentials are required for login in into flutter, missing persistence of jwt and user info on flutter once logged in
