# server/Api.Rest/Controllers/ChatControllers/ChatController.cs
@@ -8,19 +8,21 @@ namespace Api.Rest.Controllers.Chat;
 public class ChatController(IChatService chatService, ISecurityService securityService) : ControllerBase{
 
     [Route("chat/create")]
-    public async Task<ActionResult> CreateChatRoom([FromBody] CreateChatRoomDto chatRoomDto){
+    [HttpPost]
+    public async Task<ActionResult> CreateChatRoom([FromBody] CreateChatRoomDto chatRoomDto, [FromHeader]string authorization){
         await chatService.CreateChatRoom(chatRoomDto);
+        securityService.VerifyJwtOrThrow(authorization);
         return Ok();
     }
 
     [Route("chat/retreiveChats/patient")]
     [HttpPost]
-    public async Task<ActionResult> GetChatsForPatient([FromBody] UserIdChatRoomRequest chatRoomRequest, [FromHeader]string authorization)
+    public async Task<ActionResult> GetChatsForPatient([FromBody] UserIdChatRoomRequest chatRoomRequest)
     {
 
         string patientId = chatRoomRequest.userId;
         var chatRooms = await chatService.GetChatRoomsForPatient(patientId);
-        securityService.VerifyJwtOrThrow(authorization);
+        //securityService.VerifyJwtOrThrow(authorization);
         return Ok(chatRooms);
     }
 
@@ -32,9 +34,11 @@ public class ChatController(IChatService chatService, ISecurityService securityS
     }
 
     [Route("chat/retreiveMessages")]
+    [HttpPost]
     public async Task<ActionResult> GetChatMessages([FromBody] RoomIdRequest roomIdRequest){
         string roomId = roomIdRequest.roomId;
         var messages = await chatService.GetMessages(roomId);
+        //securityService.VerifyJwtOrThrow(authorization);
         return Ok(messages);
     }
 
