# server/Application/Models/Dtos/CreateQuestionDto.cs
@@ -1,6 +1,0 @@
-﻿namespace Application.Models.Dtos;
-
-public class CreateQuestionDto
-{
-    public string QuestionText { get; set; }
-}
